--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <version>5.1.24</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.wix</groupId>
+            <artifactId>wix-embedded-mysql</artifactId>
+            <version>4.0.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
